kubernetes/webhookapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webhookapi
  name: webhookapi
  namespace: tekton-webhook
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
  selector:
    app: webhookapi
